--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       </div>
       <div class="middle">
         <input id="base" type="range" orient="vertical" min="-12" max="12" value="-8">
-        <!-- <input id="freeze" type="checkbox"> -->
+        <input hidden id="freeze" type="checkbox">
       </div>
       <div class="chords">
         <div class="chord-column">
