--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>autokalimba</title>
   <script type="text/javascript">
+    const AudioContext = window.AudioContext || window.webkitAudioContext;
     const ctx = new AudioContext();
     const mix = ctx.createGain();
     mix.connect(ctx.destination);
@@ -36,11 +37,18 @@
       return k;
     }
 
-    function noteNameToFrequency(note) {
+    function semitoneToFrequency(st) {
       const base = Number(document.querySelector("#base").value);
-      const i = ("A BC D EF G ".indexOf(note.charAt(0)) + 1200 - base) % 12 + base;
-      const j = i + !!note.match(/♯/) - !!note.match(/♭/);
+      const j = (st + 1200 - base) % 12 + base;
       return 220 * 2 ** (j / 12);
+    }
+
+    function noteNameToSemitone(note) {
+      return "A BC D EF G ".indexOf(note.charAt(0)) + /♯/.test(note) - /♭/.test(note);
+    }
+
+    function noteNameToFrequency(note) {
+      return semitoneToFrequency(noteNameToSemitone(note));
     }
 
     function makeOsc(freq, gainValue, strumFactor) {
@@ -73,18 +81,24 @@
         const rect = e.target.getBoundingClientRect();
         const centerX = rect.left + rect.width / 2;
         const centerY = rect.top + rect.height / 2;
+        const note = e.target.innerText;
 
         let isFrozen = document.getElementById("freeze").checked;
-        let freq = noteNameToFrequency(e.target.innerText);
+        let freq = noteNameToFrequency(note);
         if (!isFrozen) frozenBass = freq;
         currentBass = freq;
         if (isFrozen) freq = frozenBass;
-        
-        const fourthLower = e.clientY > rect.top + rect.height * 0.65;
-        e.target.style.background = fourthLower
-          ? "linear-gradient(to bottom, #a99 65%, #f80 65%)"
-          : "linear-gradient(to bottom, #f80 65%, #777 65%)";
-        if (fourthLower) freq *= 0.75;
+
+        if (document.getElementById("split-keys").checked) {
+          const fourthLower = e.clientY > rect.top + rect.height * 0.65;
+          e.target.style.background = fourthLower
+            ? "linear-gradient(to bottom, #a99 65%, #f80 65%)"
+            : "linear-gradient(to bottom, #f80 65%, #777 65%)";
+          if (fourthLower) freq = semitoneToFrequency(noteNameToSemitone(note) - 5);
+        } else {
+          e.target.style.background = "#f80";
+        }
+
         pointers.set(e.pointerId, {
           centerX: centerX,
           centerY: centerY,
@@ -172,21 +186,22 @@
     }
 
     .container {
-      background: pink;
+      background-color: pink;
       margin: auto;
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     .controls {
-      width: 100%;
-      height: 100%;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: pink;
+      position: absolute;
       display: flex;
       justify-content: space-between;
       align-items: stretch;
@@ -249,16 +264,13 @@
       -webkit-tap-highlight-color: transparent;
     }
 
-    .button.bass-button {
-      background: linear-gradient(to bottom, #a99 65%, #777 65%);
-    }
-
     .fullscreen-button {
       position: absolute;
-      top: 4px;
+      bottom: 4px;
       left: 4px;
       width: 100px;
       height: 100px;
+      z-index: 5;
     }
 
     *:fullscreen .fullscreen-button,
@@ -271,21 +283,43 @@
       position: absolute;
       top: 4px;
       right: 4px;
+      z-index: 5;
     }
 
-    input[type=range][orient=vertical]
-    {
-      writing-mode: bt-lr; /* IE */
-      -webkit-appearance: slider-vertical; /* WebKit */
+    input[type=range][orient=vertical] {
+      writing-mode: bt-lr;
+      /* IE */
+      -webkit-appearance: slider-vertical;
+      /* WebKit */
       width: 12px;
       height: 80%;
       padding: 0 5px;
     }
 
-    input[type=checkbox]
-    {
-      width: 20px;
-      height: 20px;
+    #settings {
+      position: absolute;
+      top: 4px;
+      left: 4px;
+      z-index: 5;
+    }
+
+    label {
+      user-select: none;
+    }
+
+    label[for=settings] {
+      position: absolute;
+      top: 4px;
+      left: 30px;
+      z-index: 5;
+    }
+
+    #settings:checked~.controls {
+      display: none;
+    }
+
+    #split-keys:checked~.controls .button.bass-button {
+      background: linear-gradient(to bottom, #a99 65%, #777 65%);
     }
   </style>
 </head>
@@ -294,7 +328,12 @@
   <div class="container">
     <button class="fullscreen-button"
       onclick="document.body.requestFullscreen().then(() => screen.orientation.lock('landscape'))">Fullscreen</button>
+    <input type="checkbox" id="settings"></input>
+    <label for="settings">Settings</label>
     <a class="refresh-link" href="">Refresh</a>
+    <br><br>
+    <input type="checkbox" checked id="split-keys"></input>
+    <label for="split-keys">Split keys</label>
     <div class="controls">
       <div class="bass">
         <div class="bass-column">
@@ -326,18 +365,21 @@
           <div class="button chord-button" data-chord="7 10 14 15">m9</div>
           <div class="button chord-button" data-chord="7 10 12 17">7s</div>
           <div class="button chord-button" data-chord="6 10 12 16">&flat;5</div>
+          <div class="button chord-button" data-chord="10 14 17 21">13s</div>
         </div>
         <div class="chord-column">
           <div class="button chord-button" data-chord="7 11 12 16">Δ</div>
           <div class="button chord-button" data-chord="7 10 12 15">m7</div>
           <div class="button chord-button" data-chord="7 10 12 16">7</div>
           <div class="button chord-button" data-chord="8 10 12 16">&sharp;5</div>
+          <div class="button chord-button" data-chord="10 14 16 21">13</div>
         </div>
         <div class="chord-column">
           <div class="button chord-button" data-chord="7 9 12 16">6</div>
           <div class="button chord-button" data-chord="7 9 12 15">m6</div>
           <div class="button chord-button" data-chord="6 10 12 15">ø</div>
           <div class="button chord-button" data-chord="6 9 12 15">o</div>
+          <div class="button chord-button" data-chord="9 14 12 18">II/</div>
         </div>
       </div>
     </div>
