--- a/index.html
+++ b/index.html
@@ -329,15 +329,17 @@
       -webkit-tap-highlight-color: transparent;
     }
 
-    .fullscreen-button {
+    .fullscreen-button-area {
       position: absolute;
       top: 20px;
       left: 4px;
       z-index: 5;
+      display: flex;
+      flex-direction: column;
     }
 
-    *:fullscreen .fullscreen-button,
-    .fullscreen-button:fullscreen {
+    *:fullscreen .fullscreen-button-area,
+    .fullscreen-button-area:fullscreen {
       display: none;
     }
 
@@ -398,7 +400,7 @@
 
 <body>
   <div class="container">
-    <div id="fullscreen-button-area" class="fullscreen-button">
+    <div id="fullscreen-button-area" class="fullscreen-button-area">
       <button style="height:100px;width:100px" class="fullscreen-button">Fullscreen</button>
       <button style="height:40px;width:100px" onclick="document.getElementById('fullscreen-button-area').remove()">nah I'm good</button>
     </div>
