--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       return semitoneToFrequency(noteNameToSemitone(note));
     }
 
-    function makeOsc(freq, gainValue, strumFactor) {
+    function makeOsc(freq, gainValue, delay) {
       const osc = ctx.createBufferSource();
       const gain = ctx.createGain();
       gain.gain.value = gainValue;
@@ -70,7 +70,7 @@
       gain.connect(mix);
       // osc.frequency.value = freq;
       osc.playbackRate.value = freq / sampleBaseFreq;
-      osc.start(ctx.currentTime + Math.random() * strumFactor);
+      osc.start(ctx.currentTime + delay);
       return osc;
     }
 
@@ -170,13 +170,23 @@
         b.addEventListener("pointerdown", (e) => {
           e.target.style.background = "#f80";
           const rect = e.target.getBoundingClientRect();
+          const freqs = voicing.map(f => chordFreq(f)).sort((a,b) => a-b);
           pointers.set(e.pointerId, {
             centerX: rect.left + rect.width / 2,
             centerY: rect.top + rect.height / 2,
             note: e.target.innerText,
             target: e.target,
             voicing: voicing,
-            oscs: voicing.map(i => makeOsc(chordFreq(i), 0.2, strumSetting)),
+            oscs: freqs.map((freq, i) => {
+              const n = freqs.length;
+              const style = document.getElementById("select-strum-style").value;
+                      console.log(style, strumSetting);
+              const delay =
+                style === "random" ? strumSetting * Math.random() :
+                style === "up" ? strumSetting * i / n :
+                style === "down" ? strumSetting * (n-1-i) / n : 0;
+              return makeOsc(freq, 0.2, delay);
+            }),
           });
         });
         b.addEventListener("pointermove", (e) => {
@@ -242,6 +252,7 @@
     }
 
     body {
+      font-family: 'DejaVu Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: pink;
       width: 100%;
       height: 100%;
@@ -318,7 +329,6 @@
       border-radius: 20px;
       margin: 1px;
       background: #a99;
-      font-family: 'DejaVu Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-size: 40px;
       color: white;
       display: flex;
@@ -415,15 +425,22 @@
     <input type="checkbox" id="horizontal-chords"></input>
     <label for="horizontal-chords">Horizontal chords</label>
     <br>
-    <label for="gain">Gain</label>
+    <label for="gain">Volume</label>
     <input type="range" id="gain" min="0" max="2" value="1.4" step="0.05">
     <br>
-    <label for="strum">Strum</label>
-    <input type="range" id="strum" min="0" max="0.1" value="0.04" step="0.01">
+    <label for="strum">Strum delay</label>
+    <input type="range" id="strum" min="0" max="0.2" value="0.04" step="0.01">
+    <br>
+    <label for="strum-style">Strum style:</label>
+    <select name="strum-style" id="select-strum-style">
+      <option value="random" selected>Random</option>
+      <option value="up">Up</option>
+      <option value="down">Down</option>
+    </select>
     <br>
     Instrument:
     <select name="instrument" id="select-instrument">
-      <option value="guitar">Guitar</option>
+      <option value="guitar" selected>Guitar</option>
       <option value="kalimba">Kalimba</option>
     </select>
     <br>
